--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@element-plus/icons-vue": "^2.3.1",
     "element-plus": "^2.9.8",
     "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
