--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "crypto-js": "^4.2.0",
     "element-plus": "^2.9.8",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
