--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:server": "node server.js",
+    "start": "concurrently \"vite\" \"node server.js\"",
     "build:test": "vite build --mode test",
     "build:prod": "vite build --mode prod",
     "preview": "vite preview",
@@ -13,8 +15,12 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@microsoft/fetch-event-source": "^2.0.1",
+    "axios": "^1.9.0",
+    "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "element-plus": "^2.9.8",
+    "express": "^5.1.0",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
     "vue": "^3.5.13",
@@ -24,6 +30,7 @@
     "@eslint/js": "^9.22.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/eslint-config-prettier": "^10.2.0",
+    "concurrently": "^9.1.2",
     "eslint": "^9.22.0",
     "eslint-plugin-vue": "~10.0.0",
     "globals": "^16.0.0",
