--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
     "vue": "^3.5.13",
+    "vue-element-plus-x": "^1.1.6",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
