--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@antv/x6": "^2.18.1",
     "@element-plus/icons-vue": "^2.3.1",
+    "@logicflow/core": "^2.0.13",
+    "@logicflow/extension": "^2.0.17",
     "@microsoft/fetch-event-source": "^2.0.1",
     "axios": "^1.9.0",
     "crypto": "^1.0.1",
